libavg 1.7.1 - Jan 26, 2012

  svn revision 7008, branch release1.7.x

  Bugfixes:
  
  - Mac avg_env.sh handling of PKG_CONFIG_PATH fixed (r6886).
  - Fixed handling of files > 2 gb in VideoWriter (r6905, Bug #279).
  - Fixed VideoWriter crash with some ffmpeg versions (r6922).
  - Fixed crash when stopping and seeking one video simultaneously (r6961).
  - Fixed slow tests on Linux machines with ATI display drivers (r6970).
  - Fixed TUIO support under Linux x86-64 (r6982).

libavg 1.7.0 - Oct 29, 2011

  svn revision 6888, branch release1.7.x

  Bugfixes

libavg 1.7.0.pre1 - Oct 29, 2011

  svn revision 6871

  Major New Features:
    * Expanded effects support: New HueSatFXNode and InvertFXNode by Richard Klemm, major
      speed improvements.
    * Polished multitouch gesture support.
    * New Contact class that delivers per-touch data, per-touch callbacks that make
      event handling a lot easier.
    * SVG support.
    * New BitmapManager that allows loading of bitmaps in a background thread (OXullo
      Intersecans).

  Other Changes:
    * Lots of performance optimizations.
    * Linux ATI graphics are supported now.
    * Major speed improvements to VideoWriter. Saving full HD videos is not a problem
      anymore and costs little performance for the main rendering thread.
    * Callbacks don't hold references to python objects anymore - this should make
      freeing nodes a lot easier.
    * New StateMachine class.
    * Added Player.getPixelsPerMM(), getPhysicalScreenDimensions(), assumePixelsPerMM()
    * Added touch feedback class.

libavg 1.6.0 - May 29, 2011

  svn revision 6022, branch release1.6.x

  Bugfix release

libavg 1.6.0.pre2 - May 27, 2011

  svn revision 6018, branch release1.6.x

  Bugfix release

libavg 1.6.0.pre1 - May 20, 2011

  svn revision 5974

  Major New Features:
    * New Sphinx-based reference.
    * Unified multitouch interface: internal tracker can now be activated using 