@@ -1,3 +1,3 @@
 m4_define([VERSION_MAJOR], [1])
-m4_define([VERSION_MINOR], [7])
-m4_define([VERSION_MICRO], [1])
+m4_define([VERSION_MINOR], [8])
+m4_define([VERSION_MICRO], [0.pre1])
