@@ -1,3 +1,11 @@
+libavg 1.8.0.pre1 - Jan 11, 2014
+
+  svn revision 9495
+
+  Major New Features:
+
+  -
+
 libavg 1.7.1 - Jan 26, 2012
 
   svn revision 7008, branch release1.7.x
